[build-system]
requires = [
  "setuptools>=61.2",
  "setuptools_scm[toml]>=6.2",
  "wheel",

]
build-backend = "setuptools.build_meta"

[project]
name = "plotting"
description = "to make test plots"
readme = "README.rst"
requires-python = ">=3.10"
license = { file = "licenses/LICENSE.rst", content-type = "text/plain" }

dependencies = [
  
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "tomli; python_version <\"3.11\"",
]




[project.urls]
repository = "https://github.com/lshuns/Plotting"


[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]

[tool.setuptools_scm]

write_to = "plotting/version.py"



[tool.pytest.ini_options]
testpaths = [
  "plotting",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "plotting/__init*",
 "plotting/conftest.py",
 "plotting/*setup_package*",
 "plotting/tests/*",
 "plotting/*/tests/*",
 "plotting/extern/*",
 "plotting/version*",
 "*/plotting/__init*",
 "*/plotting/conftest.py",
 "*/plotting/*setup_package*",
 "*/plotting/tests/*",
 "*/plotting/*/tests/*",
 "*/plotting/extern/*",
 "*/plotting/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_", 
]
